<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".ui.detail.DetailActivity">

    <ImageView
        android:id="@+id/img_poster_detail"
        android:layout_width="132dp"
        android:layout_height="198dp"
        android:contentDescription="@string/image_desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/poster_aquaman" />

    <TextView
        android:id="@+id/text_title_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_poster_detail"
        app:layout_constraintTop_toTopOf="@+id/img_poster_detail"
        tools:text="@string/title" />

    <TextView
        android:id="@+id/text_date_template_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/release_date"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/text_title_detail"
        app:layout_constraintTop_toBottomOf="@id/text_title_detail" />

    <TextView
        android:id="@+id/text_date_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_date_template_detail"
        app:layout_constraintTop_toTopOf="@+id/text_date_template_detail"
        tools:text="@string/date" />


    <TextView
        android:id="@+id/text_genre_template_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/genre"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/text_title_detail"
        app:layout_constraintTop_toBottomOf="@id/text_date_detail" />

    <TextView
        android:id="@+id/text_genre_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_genre_template_detail"
        app:layout_constraintTop_toTopOf="@+id/text_genre_template_detail"
        tools:text="@string/genre" />

    <TextView
        android:id="@+id/text_runtime_template_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/runtime_template"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/text_title_detail"
        app:layout_constraintTop_toBottomOf="@id/text_genre_detail" />

    <TextView
        android:id="@+id/text_runtime_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_runtime_template_detail"
        app:layout_constraintTop_toTopOf="@+id/text_runtime_template_detail"
        tools:text="@string/runtime" />

    <TextView
        android:id="@+id/text_overview_template_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/overview"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/img_poster_detail"
        app:layout_constraintTop_toBottomOf="@id/img_poster_detail" />

    <TextView
        android:id="@+id/text_overview_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/text_overview_template_detail"
        app:layout_constraintTop_toBottomOf="@id/text_overview_template_detail"
        tools:text="@string/overview" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_favorite_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:tint="@color/white"
        android:backgroundTint="@color/light_navy"
        android:tintMode="add"
        app:srcCompat="@drawable/ic_favorite_border"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/favorite_button"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>