<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_movie"
            android:icon="@drawable/ic_baseline_movie_24"
            android:title="@string/menu_movies" />
        <item
            android:id="@+id/nav_tv"
            android:icon="@drawable/ic_baseline_tv_24"
            android:title="@string/menu_tv_shows" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_favorite"
            android:title="@string/menu_favorite" />
    </group>
</menu>